improve some of the css

--- a/testing_new_css/index.html
+++ b/testing_new_css/index.html
@@ -5,7 +5,17 @@
 <link rel="stylesheet" href="main.css"> 
 </head>
 <body>
-
+<header>
+<div class="navbar">
+<div class="container">
+<a class="navbar-brand">
+squareBracket
+</a>
+<a class="nav-link">Home</a>
+</div>
+</div>
+</header>
+<div class="container">
 <h1>squareBracket Theme Demo</h1>
 <p>Attempt at making a CSS framework that would replace Bootstrap on squareBracket.
 It doesn't have to be done in time for any milestone deadlines.</p>
@@ -15,5 +25,6 @@ It doesn't have to be done in time for any milestone deadlines.</p>
 <button type="button" class="btn btn-danger">Button 4</button>
 <br><br>
 <div class="alert">Woah.</div>
+</div>
 </body>
 </html> 
