revamp 404 again + new css

--- a/404.html
+++ b/404.html
@@ -1,9 +1,21 @@
-<html><head><title>404 Not Found</title></head>
-<body bgcolor="lightgray">
+<!DOCTYPE html><html><head><title>404 Not Found</title><link rel="stylesheet" href="testing_new_css\main.css"></head>
+<header>
+<div class="navbar">
+<div class="container">
+<a class="navbar-brand">
+squareBracket
+</a>
+<a href="\" class="nav-link">Home</a>
+</div>
+</div>
+</header>
+<body>
+<div class="container">
 <center>
 <h1 style="font-size: 80px; margin: 0px;">404</h1>
 <h2 style="font-size: 20px; margin: 0px;">Page Not Found</h2>
-<p>If you're seeing this. You ethier made a typo, or tried some weird thing... or we made a fuck up.</p>
+<p>If you're seeing this. You most likely made a typo, or you wanted to do a weird thing... or we made a fuck up.</p>
 </center>
 <hr><center>Gamerappa</center>
+</div>
 </body></html>
