--- a/404.html
+++ b/404.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><head><title>404 Not Found</title><link rel="stylesheet" href="testing_new_css\main.css"></head>
+<!DOCTYPE html><html><head><title>404 Not Found</title><link rel="stylesheet" href="\testing_new_css\main.css"></head>
 <header>
 <div class="navbar">
 <div class="container">
