--- a/404.html
+++ b/404.html
@@ -1,21 +1,10 @@
-<!DOCTYPE html><html><head><title>404 Not Found</title><link rel="stylesheet" href="\testing_new_css\main.css"></head>
-<header>
-<div class="navbar">
-<div class="container">
-<a class="navbar-brand">
-squareBracket
-</a>
-<a href="\" class="nav-link">Home</a>
-</div>
-</div>
-</header>
-<body>
-<div class="container">
-<center>
-<h1 style="font-size: 80px; margin: 0px;">404</h1>
-<h2 style="font-size: 20px; margin: 0px;">Page Not Found</h2>
-<p>If you're seeing this. You most likely made a typo, or you wanted to do a weird thing... or we made a fuck up.</p>
-</center>
-<hr><center>Gamerappa</center>
+<!DOCTYPE html><html><head><title>404 Not Found</title><link rel="stylesheet" href="/assets/2006L/base_yts1163746048.css"></head>
+<div style="margin: auto; text-align:left; padding: 20px;">
+	<div style="font-size:16px;">
+		<img alt="YouTube" src="/assets/2006L/logo_tagline_sm.gif" hspace="20" align="left">
+		<h1>404 - Page not found</h1>
+		<br>
+		This is ethier a typo, or an error of our part. If you are testing 2006L. This will be common.
+	</div>
 </div>
 </body></html>
