--- a/testing_new_css/index.html
+++ b/testing_new_css/index.html
@@ -1,26 +1,22 @@
 <!DOCTYPE html>
+<html lang="en">
 <html>
 <head>
 <title>Page Title</title>
 <link rel="stylesheet" href="main.css"> 
 </head>
 <body>
-<header>
-<div class="navbar">
-<div class="container">
-<a class="navbar-brand">
-squareBracket
-</a>
-<a class="nav-link">Home</a>
-</div>
-</div>
-</header>
-<div class="container">
-<h1>squareBracket Theme Demo</h1>
-<p>Attempt at making a CSS framework that would replace Bootstrap on squareBracket.
-It doesn't have to be done in time for any milestone deadlines.</p>
-<button type="button" class="btn">Button 1</button>
-<button type="button" class="btn btn-primary">Button 2</button> 
+<div id="header">
+        <div id="header-links">
+            <a width="121" height="32" href="/">
+                <div id="header-logo"></div>
+            </a>
+        </div>
+    </div>
+<div id="content">
+<h1>squareBracket</h1>
+<button type="button" class="btn btn-grey">Button 1</button>
+<button type="button" class="btn btn-blue">Button 2</button> 
 <button type="button" class="btn btn-secondary">Button 3</button>
 <button type="button" class="btn btn-danger">Button 4</button>
 <br><br>
