--- a/404.html
+++ b/404.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><head><title>404 Not Found</title><link rel="stylesheet" href="/assets/main.css"></head>
+<!DOCTYPE html><html><head><title>404 - Not Found</title><link rel="stylesheet" href="/assets/main.css"></head>
 <body><div style="margin: auto; text-align:left; padding: 20px;">
 	<div style="font-size:16px;">
 		<img alt="squareBracket" src="/assets/logo-wordmark.png" height="170" hspace="20" align="left"><br/>
