--- a/404.html
+++ b/404.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html><html><head><title>404 - Not Found</title><link rel="stylesheet" href="/assets/main.css"></head>
-<body><div style="margin: auto; text-align:left; padding: 20px;">
+<body><div style="margin: auto; text-align:left; padding: 10px;">
 	<div style="font-size:16px;">
-		<img alt="squareBracket" src="/assets/logo-wordmark.png" height="170" hspace="20" align="left"><br/>
-		<h1>404 - Page not found</h1>
-		<br>
-		Uh oh! The page you're looking for isn't here. <a href="javascript:history.back()">Go Back</a>
+		<img alt="squareBracket" src="/assets/logo.png" height="170" hspace="20" align="left"><br/>
+		<h1>404</h1>
+		The page you're looking for cannot be found. <a href="javascript:history.back()">Go back</a>
 	</div>
 </div>
 </body></html>
