--- a/assets/sbnext_tests/demo.html
+++ b/assets/sbnext_tests/demo.html
@@ -10,25 +10,38 @@
 <div id="content">
 <h1>squareBracket Next CSS Testing Area</h1>
 <h2>Buttons</h2>
-<p>BS1 and BS2 apparantly used an hack that moved the "gradient" upwards when hovered. We don't do that shit here. I don't like how I implemented the colors for this, redo this once we SCSS-ify it.</p>
-<p><b>TODO</b>: Add Success/green button, <i>maybe</i> Info if needed.</p>
-<button type="submit" class="btn btn-blue">Primary</button>
-<button type="submit" class="btn btn-grey">Secondary</button>
+<button type="submit" class="btn btn-primary">Primary</button>
+<button type="submit" class="btn btn-secondary">Secondary</button>
+<button type="submit" class="btn btn-success">Success</button>
+<button type="submit" class="btn btn-info">Info</button>
 <button type="submit" class="btn btn-danger">Danger</button>
 <button type="submit" class="btn btn-warning">Warning</button>
+<button type="submit" class="btn btn-light">Light</button>
 <button type="submit" class="btn btn-dark">Dark</button>
+<button type="submit" class="btn btn-poktube">PokTube</button>
+<button type="submit" class="btn btn-sneed">Sneed</button>
 <h3>Sizing</h3>
 <h4>Large</h4>
-<button type="submit" class="btn btn-large btn-blue">Large primary</button>
-<button type="submit" class="btn btn-large btn-grey">Large secondary</button>
+<button type="submit" class="btn btn-large btn-primary">Large primary</button>
+<button type="submit" class="btn btn-large btn-secondary">Large secondary</button>
+<button type="submit" class="btn btn-large btn-success">Large Success</button>
+<button type="submit" class="btn btn-large btn-info">Large info</button>
 <button type="submit" class="btn btn-large btn-danger">Large danger</button>
 <button type="submit" class="btn btn-large btn-warning">Large warning</button>
+<button type="submit" class="btn btn-large btn-light">Large light</button>
 <button type="submit" class="btn btn-large btn-dark">Large dark</button>
+<button type="submit" class="btn btn-large btn-poktube">Large PokTube</button>
+<button type="submit" class="btn btn-large btn-sneed">Large Sneed</button>
 <h4>Small</h4>
-<button type="submit" class="btn btn-small btn-blue">Small primary</button>
-<button type="submit" class="btn btn-small btn-grey">Small secondary</button>
+<button type="submit" class="btn btn-small btn-primary">Small primary</button>
+<button type="submit" class="btn btn-small btn-secondary">Small secondary</button>
+<button type="submit" class="btn btn-small btn-success">Small Success</button>
+<button type="submit" class="btn btn-small btn-info">Small Info</button>
 <button type="submit" class="btn btn-small btn-danger">Small danger</button>
 <button type="submit" class="btn btn-small btn-warning">Small warning</button>
+<button type="submit" class="btn btn-small btn-light">Small light</button>
 <button type="submit" class="btn btn-small btn-dark">Small dark</button>
+<button type="submit" class="btn btn-small btn-sneed">Small Sneed</button>
+<button type="submit" class="btn btn-small btn-poktube">Small PokTube</button>
 </div>
 </body>
