make alerts and background colors

--- a/assets/sbnext_tests/demo.html
+++ b/assets/sbnext_tests/demo.html
@@ -43,5 +43,29 @@
 <button type="submit" class="btn btn-small btn-dark">Small dark</button>
 <button type="submit" class="btn btn-small btn-sneed">Small Sneed</button>
 <button type="submit" class="btn btn-small btn-poktube">Small PokTube</button>
+<h2>Alerts</h2>
+<div class="alert alert-primary">Primary</div>
+<div class="alert alert-secondary">Secondary</div>
+<div class="alert alert-success">Success</div>
+<div class="alert alert-info">Info</div>
+<div class="alert alert-danger">Danger</div>
+<div class="alert alert-warning">Warning</div>
+<div class="alert alert-light">Light</div>
+<div class="alert alert-dark">Dark</div>
+<div class="alert alert-poktube">PokTube</div>
+<div class="alert alert-sneed">Sneed</div>
+<h2>Backgrounds</h2>
+</div>
+<div style="width: 100%; padding: 25px" class="bg-primary">Primary</div>
+<div style="width: 100%; padding: 25px" class="bg-secondary">Secondary</div>
+<div style="width: 100%; padding: 25px" class="bg-success">Success</div>
+<div style="width: 100%; padding: 25px" class="bg-info">Info</div>
+<div style="width: 100%; padding: 25px" class="bg-danger">Danger</div>
+<div style="width: 100%; padding: 25px" class="bg-warning">Warning</div>
+<div style="width: 100%; padding: 25px" class="bg-light">Light</div>
+<div style="width: 100%; padding: 25px" class="bg-dark">Dark</div>
+<div style="width: 100%; padding: 25px" class="bg-poktube">PokTube</div>
+<div style="width: 100%; padding: 25px" class="bg-sneed">Sneed</div>
+<div id="content">
 </div>
 </body>
