--- a/404.html
+++ b/404.html
@@ -1,7 +1,6 @@
-<!DOCTYPE html><html><head><title>404 - Not Found</title><link rel="stylesheet" href="/assets/main.css"></head>
+<!DOCTYPE html><html><head><title>404 - Not Found</title></head>
 <body><div style="margin: auto; text-align:left; padding: 10px;">
 	<div style="font-size:16px;">
-		<img alt="squareBracket" src="/assets/logo.png" height="170" hspace="20" align="left"><br/>
 		<h1>404</h1>
 		The page you're looking for cannot be found. <a href="javascript:history.back()">Go back</a>
 	</div>
