--- a/public/assets/icons/html_code.html
+++ b/public/assets/icons/html_code.html
@@ -1,9 +1,9 @@
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
-<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#1b93ff">
-<meta name="apple-mobile-web-app-title" content="squareBracket">
-<meta name="application-name" content="squareBracket">
-<meta name="msapplication-TileColor" content="#2d89ef">
-<meta name="theme-color" content="#ffffff">
+<link href="/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
+<link href="/favicon-32x32.png" rel="icon" sizes="32x32" type="image/png">
+<link href="/favicon-16x16.png" rel="icon" sizes="16x16" type="image/png">
+<link href="/site.webmanifest" rel="manifest">
+<link color="#1b93ff" href="/safari-pinned-tab.svg" rel="mask-icon">
+<meta content="squareBracket" name="apple-mobile-web-app-title">
+<meta content="squareBracket" name="application-name">
+<meta content="#2d89ef" name="msapplication-TileColor">
+<meta content="#ffffff" name="theme-color">
