remove old modal scss in favor of new dialog scss
pretty much our first breaking change, but that's expected.

--- a/finalium/tests/modal.html
+++ b/finalium/tests/modal.html
@@ -12,6 +12,9 @@
 </head>
 <body>
 <div class="container">
+    <div class="alert alert-info">
+        Finalium dialogs use the dialog HTML element.
+    </div>
     <!-- A modal dialog containing a form -->
     <dialog id="favDialog" class="dialog">
         <form>
