experimental shit: login dialog and finalium js

--- a/finalium/tests/javascript.html
+++ b/finalium/tests/javascript.html
@@ -66,10 +66,10 @@
 </nav>
 <div class="container">
     <h1>Finalium Javascript Testing Zone</h1>
-    <p>Built opon the basics Bootstrap 5's Javascript.</p>
+    <p>Built opon the basics of Bootstrap 5's Javascript.</p>
     <h2>Dialogs</h2>
     <div class="alert alert-info">
-        Finalium dialogs use the dialog HTML element.
+        Finalium dialogs use the dialog HTML element. Animations are partially implemented, but one of them doesn't work on Firefox.
     </div>
     <!-- A modal dialog containing a form -->
     <dialog id="favDialog" class="dialog fade">
